# cash-flow

./: .gitignore  CashFlow.py  CashFlow.spec  Makefile  create_exe.bat  database.db  pyproject.toml
cash_flow/database/: AEngine.py  Model.py  Views.py  clearing.py  create_database.py  rand_dimensions.py  rand_documents.py  sync_dimensions.py  sync_documents.py
cash_flow/gl/: clearing.py
cash_flow/sync/: sync_accounts.py  sync_partners.py
cash_flow/ui/: AWidgets.py  Browse_ActualPayment.py  Browse_ActualReceipt.py  Browse_BudgetedPayment.py  Browse_BudgetedReceipt.py  Browse_PendingPayment.py  Browse_PendingReceipt.py  Budget.py  CashFlow.py  CashFlow.ui  CashFlowDefinition.py  CashFlowReport.py  ComboAccounts.py  ComboDefinition.py  ComboStructure.py  Customers.py  CustomersCreditnotes.py  CustomersInvoices.py  CustomersInvoicesCleared.py  CustomersInvoicesUncleared.py  CustomersPayments.py  Demo.py  PlannedAnonymousOperations.py  Vendors.py  VendorsCreditnotes.py  VendorsInvoices.py  VendorsInvoicesCleared.py  VendorsInvoicesUncleared.py  VendorsPayments.py
cash_flow/util/: Converters.py  gui.py  (+3 more)
data/: bck_database_2025.04.02.db  database.db
docs/: Jumis - Licenzes ligums.odt  Jumis - abonements .txt  Jumis - internetveikala lietosanas noteikumi.odt
jupyter/: CashFlow_graph.ipynb  Future_june_day.xlsx  budget.ipynb  cash_flow_final.ipynb  cash_flow_report.ipynb  complicated_report.ipynb  invoices.ipynb  report.ipynb  synchronization.ipynb  testing pd.ipynb
tests/: GraphDemo.py  TableDemo.py  pyqt_wait.py
ui/: CashFlow.ui
var/: table_itemdelegate.py
(+7 files in other folders)
